# storage-basics-nazar-andriievych

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  storage_cli  storage_layer.cpp  storage_layer.h
include/: sql_executor.h  sql_lexer.h  sql_parser.h  storage_layer.h
src/: sql_ast.cpp  sql_cli.cpp  sql_executor.cpp  sql_lexer.cpp  sql_parser.cpp  storage_cli.cpp  storage_layer.cpp
tests/: sql_cli_test.cpp  storage_layer_test.cpp
